--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -30,12 +30,9 @@ jobs:
       - name: run services
         run: |
           make local-dev-up
-      - name: run server
+      - name: integration test for database logics
         run: |
-          screen -dm bash -c "make run;"
-      - name: integration test
-        run: |
-          make integration-test
+          make db-integration-test
   deploy: 
     needs: [integration-test]
     runs-on: ubuntu-latest
