add: auth module complete

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,5 @@
 GOGC=80
-PROJECT_NAME=PROJECT_NAME
+PROJECT_NAME=kickstart
 PRODUCTION_ENVIRONMENT=false
 DATABASE_DIALECT=postgres
 DATABASE_USERNAME=postgres
