--- a/.example.env
+++ b/.example.env
@@ -20,5 +20,6 @@ SERVER_LISTEN_PORT=8000
 SERVICE_NAME_AS_ROOT=false
 GRPC_CONNECT_TIMEOUT_MS=10000
 SYSTEM_KEY_ID=projects/apen-81674/locations/asia-east1/keyRings/dev/cryptoKeys/c32c5af3-7228-40a5-b42e-026f98ad39e1/cryptoKeyVersions/1
+TESTING=false
 NEW_RELIC_LICENSE=
 RABBITMQ_CONN_URL=
