update: set project id to default value and add comments in github workflow

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -30,6 +30,7 @@ jobs:
       - name: run services
         run: |
           make local-dev-up
+      # this runs the api server and run database migration scripts
       - name: run server
         run: |
           screen -dm bash -c "make run;"
