--- a/.example.env
+++ b/.example.env
@@ -2,9 +2,9 @@ GOGC=80
 PROJECT_NAME=kickstart
 PRODUCTION_ENVIRONMENT=false
 DATABASE_DIALECT=postgres
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_NAME=dev
+DATABASE_USERNAME=user
+DATABASE_PASSWORD=pass
+DATABASE_NAME=demo
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=5432
 DATABASE_MAX_IDLE_CONNECTIONS=3
