--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,20 @@
-version: '3'
+version: '3.9'
 services:
-  postgresql:
-    image: 'postgres:14.3'
-    command:
-      - "-c"
-      - "log_destination=stderr"
-      - "-c"
-      - "log_connections=yes"
-      - "-c"
-      - "log_disconnections=yes"
-      - "-c"
-      - "log_statement=all"
+
+  postgres:
+    container_name: postgres
+    image: postgres
     environment:
-      POSTGRES_USER: 'postgres'
-      POSTGRES_PASSWORD: 'postgres'
-      POSTGRES_DB: 'dev'
-      PGPORT: '5432'
-    # volumes:
-      # - './phar-backup.sql:/docker-entrypoint-initdb.d/phar-backup.sql'
-      # - './pgdata:/var/lib/postgresql/data'
+      POSTGRES_USER: 'user'
+      POSTGRES_PASSWORD: 'pass'
+      POSTGRES_DB: 'demo'
     ports:
       - 5432:5432
-    logging:
-      options:
-        max-size: '10m'
-        max-file: '50'
-    restart: 'always'
+
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:3.8.12-management
+    ports:
+      - 5672:5672
+      - 15672:15672
 
