--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -29,7 +29,7 @@ jobs:
           go-version: '1.22'
       - name: run services
         run: |
-          make local-dev-up
+          make compose-up
       # this runs the api server and run database migration scripts
       - name: run server
         run: |
