update: branch name in cucd

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -2,7 +2,7 @@ name: Test and Build
 
 on:
   push:
-    branches: ["dev", "stage", "master"]
+    branches: ["dev", "staging", "master"]
   pull_request:
     branches: ["master"]
 
